Three less *Logo classes and few PMD suggestions.